# wasm-bindgen-lite

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
bench/: README.md  bench.mjs  package.json
bench/scripts/: build-variants.js  merge-reports.mjs  run-all.mjs
bench/simd-detect/: Cargo.toml
bench/simd-detect/src/: main.rs
examples/browser-vite/: Cargo.toml  README.md  index.html  package-lock.json  package.json  playwright.config.js  wasm-bindgen-lite.config.json
examples/browser-vite/src/: lib.rs  main.js  worker.js
examples/browser-vite/tests/: wasm.spec.js
examples/node-basic/: Cargo.toml  README.md  package-lock.json  package.json  test.js  wasm-bindgen-lite.config.json
examples/node-basic/src/: lib.rs
examples/offset-split/: Cargo.toml  README.md  bench.js  package-lock.json  package.json  test.js  wasm-bindgen-lite.config.json
examples/offset-split/src/: lib.js  lib.rs
examples/simd-sum/: Cargo.toml  README.md  bench.js  package-lock.json  package.json  test.js  wasm-bindgen-lite.config.json
examples/simd-sum/src/: lib.rs
examples/streaming-lines/: Cargo.toml  README.md  bench.js  demo.js  package-lock.json  package.json  sample.txt  wasm-bindgen-lite.config.json
examples/streaming-lines/src/: lib.js  lib.rs
scripts/: build.js  test-examples.sh  test.js
src/: lib.rs
src/cli/: bench.js  build.js  config.js  emit.js  index.js  pkg.js
src/js/: browser-inline.js  browser.js  core.js  node-inline.js  node.js  util.js
test/: emit.test.js
