[package]
name = "simd-detect"
version = "0.1.0"
edition = "2021"
description = "SIMD instruction detector for WebAssembly with DWARF source mapping"

[workspace]

[[bin]]
name = "simd-detect"
path = "src/main.rs"

[dependencies]
wasmparser = "0.222"
gimli = "0.31"
object = { version = "0.36", default-features = false, features = ["read", "wasm"] }
addr2line = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
